--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@
     background-color: whitesmoke;
     padding-top: 20px;
     padding-bottom: 20px;
+    height: 230px;
 }
 
 .wear-the-trend {
